tests/error/iter_errors/next_missing.err
Error: Not an iterator (at $FILE:29:13)
   | 
27 | @guppy
28 | def test(x: MyType) -> None:
29 |     for _ in x:
   |              ^ Expression of type `MyIter` is not an iterator

Help: Implement missing method: `__next__: MyIter -> Option[(?T, MyIter)]`

Guppy compilation failed due to 1 previous error
